--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "log4js": "^6.3.0",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "express-session": "^1.17.2",
-    "log4js": "^6.3.0"
   },
   "engines": {
     "node": "12.18.3",
