--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/node_modules
-/public/stylesheets/*.scss
-/public/stylesheets/*.map
-/routes/log/*.log
+node_modules
+public/stylesheets/*.scss
+public/stylesheets/*.map
+routes/log/*.log
