--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "workbox-sw": "^6.5.3",
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "engines": {
     "node": "12.18.3",
